load("@rules_java//java:defs.bzl", "java_library")
load("//:junit.bzl", "junit_tests")

java_library(
    name = "project145",
    srcs = glob(["src/main/java/**/*.java"]),
    javacopts = ["-XepDisableAllChecks"],
    visibility = ["//visibility:public"],
    deps = [
      "//project142:project142",
      "//project143:project143",
      "//project144:project144"
    ]
)

junit_tests(
    name = "tests_for_project145",
    size = "small",
    srcs = glob(["src/test/java/**/*.java"]),
    deps = [
        "project145",
              "//project142:project142",
      "//project143:project143",
      "//project144:project144"
    ],
)