load("@rules_java//java:defs.bzl", "java_library")
load("//:junit.bzl", "junit_tests")

java_library(
    name = "project146",
    srcs = glob(["src/main/java/**/*.java"]),
    javacopts = ["-XepDisableAllChecks"],
    visibility = ["//visibility:public"],
    deps = [
      "//project139:project139",
      "//project134:project134",
      "//project144:project144",
      "//project135:project135",
      "//project145:project145",
      "//project140:project140",
      "//project142:project142",
      "//project141:project141",
      "//project136:project136",
      "//project143:project143",
      "//project138:project138",
      "//project137:project137"
    ]
)

junit_tests(
    name = "tests_for_project146",
    size = "small",
    srcs = glob(["src/test/java/**/*.java"]),
    deps = [
        "project146",
              "//project139:project139",
      "//project134:project134",
      "//project144:project144",
      "//project135:project135",
      "//project145:project145",
      "//project140:project140",
      "//project142:project142",
      "//project141:project141",
      "//project136:project136",
      "//project143:project143",
      "//project138:project138",
      "//project137:project137"
    ],
)