load("@rules_java//java:defs.bzl", "java_library")
load("//:junit.bzl", "junit_tests")

java_library(
    name = "project150",
    srcs = glob(["src/main/java/**/*.java"]),
    javacopts = ["-XepDisableAllChecks"],
    visibility = ["//visibility:public"],
    deps = [
      "//project149:project149",
      "//project147:project147",
      "//project148:project148"
    ]
)

junit_tests(
    name = "tests_for_project150",
    size = "small",
    srcs = glob(["src/test/java/**/*.java"]),
    deps = [
        "project150",
              "//project149:project149",
      "//project147:project147",
      "//project148:project148"
    ],
)