load("@rules_java//java:defs.bzl", "java_library")
load("//:junit.bzl", "junit_tests")

java_library(
    name = "project159",
    srcs = glob(["src/main/java/**/*.java"]),
    javacopts = ["-XepDisableAllChecks"],
    visibility = ["//visibility:public"],
    deps = [
      "//project150:project150",
      "//project154:project154",
      "//project158:project158",
      "//project147:project147",
      "//project148:project148",
      "//project149:project149",
      "//project151:project151",
      "//project152:project152",
      "//project153:project153",
      "//project155:project155",
      "//project156:project156",
      "//project157:project157"
    ]
)

junit_tests(
    name = "tests_for_project159",
    size = "small",
    srcs = glob(["src/test/java/**/*.java"]),
    deps = [
        "project159",
              "//project150:project150",
      "//project154:project154",
      "//project158:project158",
      "//project147:project147",
      "//project148:project148",
      "//project149:project149",
      "//project151:project151",
      "//project152:project152",
      "//project153:project153",
      "//project155:project155",
      "//project156:project156",
      "//project157:project157"
    ],
)