load("@rules_java//java:defs.bzl", "java_library")
load("//:junit.bzl", "junit_tests")

java_library(
    name = "project16",
    srcs = glob(["src/main/java/**/*.java"]),
    javacopts = ["-XepDisableAllChecks"],
    visibility = ["//visibility:public"],
    deps = [
      "//project14:project14",
      "//project0:project0",
      "//project15:project15",
      "//project13:project13"
    ]
)

junit_tests(
    name = "tests_for_project16",
    size = "small",
    srcs = glob(["src/test/java/**/*.java"]),
    deps = [
        "project16",
              "//project14:project14",
      "//project0:project0",
      "//project15:project15",
      "//project13:project13"
    ],
)