load("@rules_java//java:defs.bzl", "java_library")
load("//:junit.bzl", "junit_tests")

java_library(
    name = "project160",
    srcs = glob(["src/main/java/**/*.java"]),
    javacopts = ["-XepDisableAllChecks"],
    visibility = ["//visibility:public"],
    deps = [
      "//project133:project133",
      "//project146:project146",
      "//project159:project159",
      "//project124:project124",
      "//project128:project128",
      "//project132:project132",
      "//project121:project121",
      "//project122:project122",
      "//project123:project123",
      "//project125:project125",
      "//project126:project126",
      "//project127:project127",
      "//project129:project129",
      "//project130:project130",
      "//project131:project131",
      "//project137:project137",
      "//project141:project141",
      "//project145:project145",
      "//project134:project134",
      "//project135:project135",
      "//project136:project136",
      "//project138:project138",
      "//project139:project139",
      "//project140:project140",
      "//project142:project142",
      "//project143:project143",
      "//project144:project144",
      "//project150:project150",
      "//project154:project154",
      "//project158:project158",
      "//project147:project147",
      "//project148:project148",
      "//project149:project149",
      "//project151:project151",
      "//project152:project152",
      "//project153:project153",
      "//project155:project155",
      "//project156:project156",
      "//project157:project157"
    ]
)

junit_tests(
    name = "tests_for_project160",
    size = "small",
    srcs = glob(["src/test/java/**/*.java"]),
    deps = [
        "project160",
              "//project133:project133",
      "//project146:project146",
      "//project159:project159",
      "//project124:project124",
      "//project128:project128",
      "//project132:project132",
      "//project121:project121",
      "//project122:project122",
      "//project123:project123",
      "//project125:project125",
      "//project126:project126",
      "//project127:project127",
      "//project129:project129",
      "//project130:project130",
      "//project131:project131",
      "//project137:project137",
      "//project141:project141",
      "//project145:project145",
      "//project134:project134",
      "//project135:project135",
      "//project136:project136",
      "//project138:project138",
      "//project139:project139",
      "//project140:project140",
      "//project142:project142",
      "//project143:project143",
      "//project144:project144",
      "//project150:project150",
      "//project154:project154",
      "//project158:project158",
      "//project147:project147",
      "//project148:project148",
      "//project149:project149",
      "//project151:project151",
      "//project152:project152",
      "//project153:project153",
      "//project155:project155",
      "//project156:project156",
      "//project157:project157"
    ],
)