load("@rules_java//java:defs.bzl", "java_library")
load("//:junit.bzl", "junit_tests")

java_library(
    name = "project160",
    srcs = glob(["src/main/java/**/*.java"]),
    javacopts = ["-XepDisableAllChecks"],
    visibility = ["//visibility:public"],
    deps = [
      "//project134:project134",
      "//project144:project144",
      "//project146:project146",
      "//project124:project124",
      "//project156:project156",
      "//project142:project142",
      "//project152:project152",
      "//project122:project122",
      "//project154:project154",
      "//project132:project132",
      "//project128:project128",
      "//project151:project151",
      "//project126:project126",
      "//project158:project158",
      "//project136:project136",
      "//project138:project138",
      "//project148:project148",
      "//project123:project123",
      "//project155:project155",
      "//project133:project133",
      "//project135:project135",
      "//project145:project145",
      "//project0:project0",
      "//project131:project131",
      "//project141:project141",
      "//project143:project143",
      "//project121:project121",
      "//project153:project153",
      "//project139:project139",
      "//project150:project150",
      "//project149:project149",
      "//project130:project130",
      "//project129:project129",
      "//project140:project140",
      "//project147:project147",
      "//project125:project125",
      "//project157:project157",
      "//project159:project159",
      "//project127:project127",
      "//project137:project137"
    ]
)

junit_tests(
    name = "tests_for_project160",
    size = "small",
    srcs = glob(["src/test/java/**/*.java"]),
    deps = [
        "project160",
              "//project134:project134",
      "//project144:project144",
      "//project146:project146",
      "//project124:project124",
      "//project156:project156",
      "//project142:project142",
      "//project152:project152",
      "//project122:project122",
      "//project154:project154",
      "//project132:project132",
      "//project128:project128",
      "//project151:project151",
      "//project126:project126",
      "//project158:project158",
      "//project136:project136",
      "//project138:project138",
      "//project148:project148",
      "//project123:project123",
      "//project155:project155",
      "//project133:project133",
      "//project135:project135",
      "//project145:project145",
      "//project0:project0",
      "//project131:project131",
      "//project141:project141",
      "//project143:project143",
      "//project121:project121",
      "//project153:project153",
      "//project139:project139",
      "//project150:project150",
      "//project149:project149",
      "//project130:project130",
      "//project129:project129",
      "//project140:project140",
      "//project147:project147",
      "//project125:project125",
      "//project157:project157",
      "//project159:project159",
      "//project127:project127",
      "//project137:project137"
    ],
)