load("@rules_java//java:defs.bzl", "java_library")
load("//:junit.bzl", "junit_tests")

java_library(
    name = "project164",
    srcs = glob(["src/main/java/**/*.java"]),
    javacopts = ["-XepDisableAllChecks"],
    visibility = ["//visibility:public"],
    deps = [
      "//project161:project161",
      "//project162:project162",
      "//project163:project163"
    ]
)

junit_tests(
    name = "tests_for_project164",
    size = "small",
    srcs = glob(["src/test/java/**/*.java"]),
    deps = [
        "project164",
              "//project161:project161",
      "//project162:project162",
      "//project163:project163"
    ],
)