load("@rules_java//java:defs.bzl", "java_library")
load("//:junit.bzl", "junit_tests")

java_library(
    name = "project168",
    srcs = glob(["src/main/java/**/*.java"]),
    javacopts = ["-XepDisableAllChecks"],
    visibility = ["//visibility:public"],
    deps = [
      "//project165:project165",
      "//project166:project166",
      "//project167:project167"
    ]
)

junit_tests(
    name = "tests_for_project168",
    size = "small",
    srcs = glob(["src/test/java/**/*.java"]),
    deps = [
        "project168",
              "//project165:project165",
      "//project166:project166",
      "//project167:project167"
    ],
)