load("@rules_java//java:defs.bzl", "java_library")
load("//:junit.bzl", "junit_tests")

java_library(
    name = "project172",
    srcs = glob(["src/main/java/**/*.java"]),
    javacopts = ["-XepDisableAllChecks"],
    visibility = ["//visibility:public"],
    deps = [
      "//project171:project171",
      "//project0:project0",
      "//project170:project170",
      "//project169:project169"
    ]
)

junit_tests(
    name = "tests_for_project172",
    size = "small",
    srcs = glob(["src/test/java/**/*.java"]),
    deps = [
        "project172",
              "//project171:project171",
      "//project0:project0",
      "//project170:project170",
      "//project169:project169"
    ],
)