load("@rules_java//java:defs.bzl", "java_library")
load("//:junit.bzl", "junit_tests")

java_library(
    name = "project173",
    srcs = glob(["src/main/java/**/*.java"]),
    javacopts = ["-XepDisableAllChecks"],
    visibility = ["//visibility:public"],
    deps = [
      "//project164:project164",
      "//project168:project168",
      "//project172:project172",
      "//project161:project161",
      "//project162:project162",
      "//project163:project163",
      "//project165:project165",
      "//project166:project166",
      "//project167:project167",
      "//project169:project169",
      "//project170:project170",
      "//project171:project171"
    ]
)

junit_tests(
    name = "tests_for_project173",
    size = "small",
    srcs = glob(["src/test/java/**/*.java"]),
    deps = [
        "project173",
              "//project164:project164",
      "//project168:project168",
      "//project172:project172",
      "//project161:project161",
      "//project162:project162",
      "//project163:project163",
      "//project165:project165",
      "//project166:project166",
      "//project167:project167",
      "//project169:project169",
      "//project170:project170",
      "//project171:project171"
    ],
)